# buddy

./: pyproject.toml
src/buddy/: __init__.py
src/buddy/workout/: timer.py
